trunk/Archive2/f9/6e92b7e855f603/output
main.cpp:21:5: error: no matching function for call to 'do_something'
    do_something([](abc&, def&) {});
    ^~~~~~~~~~~~
main.cpp:13:6: note: candidate template ignored: could not match 'function<void (type-parameter-0-0...)>' against '(lambda at main.cpp:21:18)'
void do_something(std::function<void(Components...)> fn) {}
     ^
1 error generated.
